151018-02-05-d01-hello_world/hello_world_error-prone.log
*****
* console output for test 01
*****

[r4mzy@ARCH42 151018-02-05-d01-hello_world]$ g++ -std=c++11 -o hello_world_error-prone.out hello_world_error-prone.cpp 
hello_world_error-prone.cpp: In function ‘int main()’:
hello_world_error-prone.cpp:7:2: error: ‘cout’ was not declared in this scope
  cout << "Hello, World!\n";
  ^
hello_world_error-prone.cpp:8:19: error: ‘keep_window_open’ was not declared in this scope
  keep_window_open();
                   ^
* can see error is given as "file:line:char" followed by the problematic code element and then followed by the actual line
* in this case, functions I am calling ( cout() and keep_window_open() ) are defined in std_lib_facilities.h which, as far as the compiler was
* concerned, was not included in the source so there's nothing for it to reference how those functions work or what they do...

*****
* console output for test 02
*****

[r4mzy@ARCH42 151018-02-05-d01-hello_world]$ g++ -std=c++11 -o hello_world_error-prone.out hello_world_error-prone.cpp 
hello_world_error-prone.cpp:6:31: fatal error: stdlib_facilities.h: No such file or directory
compilation terminated.

* somewhat expectedly, intentional misspelling of std_lib_facilities.h results in compiler trying to include a file that doesn't exist, and 
* therefor stopping compilation

*****
* console output for test 03 - partial
*****

r4mzy@ARCH42 151018-02-05-d01-hello_world]$ g++ -std=c++11 -o hello_world_error-prone.out hello_world_error-prone.cpp
hello_world_error-prone.cpp:9:10: warning: missing terminating " character
  cout << "Hello, World!\n;
          ^

* the very first message is the most immediately helpful, clearly pointing out the missing termination of the string
* regardless, compiler continues after this point and seems to devolve into a cascading madness of further errors as it tries to compile something
* it looks like it is trying to pipe everything from the start of the string to EOF to cout
* I included the rest of the (many) messages logged to the console in a separate log file, hello_world_error-prone.log.test03

*****
